Resolves: fdo#59922 Incorrect character range for "Katakana Phonetic"

Change-Id: Ic541e2510567ca0f264730568c482fef521e6318